# sync-ai

./: .gitignore  Dockerfile  README.md  alembic.ini  check_models.py  database.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  test_embedding.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 017a52684fd1_add_vector_column.py  2375957ceca0_add_pgvector_extension.py  338168752a5e_initial_migration.py  e84bd2b1d17e_initial_migration.py
app/: ai.py  auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
frontend/: Dockerfile  package-lock.json  vite.config.js
frontend/src/: App.jsx  CreateTask.jsx  Layout.jsx  Login.jsx  TaskBoard.jsx  TaskModal.jsx  TaskSkeleton.jsx  api.js
frontend/src/context/: AuthContext.jsx
tests/: conftest.py  test_main.py
